# Liquid_Glass_Renderer

./: CMakeLists.txt  README.md
scripts/: plot_fps.py
shaders/: display.frag  screen_quad.vert
src/app/: App.cpp  App.h  main.cpp
src/core/: Config.cpp  Config.h  Engine.cpp  Engine.h  RealtimePlayback.cpp  RealtimePlayback.h  Timer.cpp  Timer.h
src/experiments/: Ablation.cpp  Ablation.h  AblationBatchRunner.cpp  AblationBatchRunner.h  Benchmark.cpp  Benchmark.h  DatasetRunner.cpp  DatasetRunner.h  ImageBatchRunner.cpp  ImageBatchRunner.h  Metrics.cpp  Metrics.h  main.cpp
src/io/: FrameSource.h  ImageIO.cpp  ImageIO.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
src/liquid_glass/: Compose.cu  ExecutionPlan.cpp  ExecutionPlan.h  GlassParams.h  GlassPipeline.cpp  GlassPipeline.h  Legibility.cu  NormalField.cu  ReflectionSpecular.cu  Refraction.cu  ShapeSDF.cpp  ShapeSDF.h  Temporal.cu  ThicknessField.cu
src/renderer/: CUDAInterop.cpp  CUDAInterop.h  GLDisplay.cpp  GLDisplay.h  Renderer.cpp  Renderer.h
src/ui/: Interaction.cpp  Interaction.h  TabBar.cpp  TabBar.h
src/utils/: Color.cpp  Color.h  Logger.cpp  Logger.h
